# willflix

./: README.md  main.ipynb  pyproject.toml
src/: model.py
